# SentinelFlow-AI

./: .env.example  .gitignore  .railwayignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_SUMMARY.md  GETTING-STARTED.md  JUDGE_DEMO_GUIDE.md  LICENSE  LOCAL_DEVELOPMENT_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PHASE1_PHASE2_COMPLETION.md  QUICKSTART.md  README.md  WINDOWS-SETUP.md  docker-compose.extended.yml  docker-compose.yml  pyproject.toml  railway.json  run_sentinelflow.bat  screenpro (1).docx  setup.ps1  start-sentinelflow.ps1  start.ps1  startup.sh
.github/: DEPLOYMENT.md  PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  alembic.ini  railway.json  requirements-dev.txt  requirements.txt  run.py
config/: production.py
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DEMO.md  DEPLOYMENT.md  DEVELOPMENT.md  FINAL_PRODUCTION_REPORT.md  FINAL_VALIDATION_REPORT.md  OPERATIONS.md  POSTLAUNCH.md  PRODUCT_REQUIREMENTS_DOCUMENT.md  RUNBOOKS.md  SENTINELFLOW_AI_KNOWLEDGE_TRANSFER_REPORT.md  TROUBLESHOOTING.md
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  railway.json
kubernetes/: configmap.yaml  deployment.yaml  secrets.yaml  service.yaml
mastra-service/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
monitoring/: alerts.yml  prometheus.yml
scripts/: audit_imports.py  backup.sh  demo-runner.sh  health-check.sh  load-test.sh  patch_page_tsx.py  restore.sh  verify-deployment.sh
(+196 files in other folders)
